# UserTestFramework

./: README.md
v0.1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
v0.1/main/: controller.cpp  model.cpp  model.h  program.cpp  view.cpp  view.h
v0.1/test/: test.cpp  test.h
v0.1/test_core/: testconfigs.h  testfactory.cpp  testfactory.h
v0.1/test_data/: testdata.cpp  testdata.h  testdataset.h  testdatasetstore.h
v0.1/ui/: testlistwidget.h  testrowwidget.h  testsummarydialog.cpp  testsummarydialog.ui
v0.2/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
v0.2/main/: controller.h  model.cpp  model.h  program.cpp  program.h  view.cpp  view.h
v0.2/test/: test.cpp  test.h  testline.cpp  testline.h  testparams.cpp  testparams.h
v0.2/test_core/: testconfigs.cpp  testfactory.cpp  testfactory.h  testsession.cpp  testsession.h
v0.2/test_data/: testdataset.cpp  testdatasetstore.cpp
v0.2/ui/: testflowdialog.cpp  testflowdialog.h  testflowdialog.ui  testlistwidget.cpp  testquizdialog.cpp  testquizdialog.h  testquizdialog.ui  testrowwidget.cpp  testsummarydialog.h
